Make sure styles look right on team form
On the Project Team form, the CSS class did not get changed to be plural and
so didn't look right. This change fixes that. It also replaces the "check" and
"square" icons to look less like checkboxes (which might be considered
interactive) with an unhighlighted checkmark and a dot (to be a placeholder).

--- a/app/assets/stylesheets/team_memberships.scss
+++ b/app/assets/stylesheets/team_memberships.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-.team-edit {
+.teams-edit {
   table {
     border-collapse: separate;
     border-spacing: 0 0.375rem;
@@ -68,8 +68,7 @@
           vertical-align: middle;
           width: 1rem;
 
-          &[src*="check-light"] {
-            background-color: $navy-blue;
+          &[src*="check"] {
             height: 0.875rem;
             width: 0.875rem;
           }
